io-takamaka-examples/src/main/java/io/takamaka/tests/errors/illegaltypeforstoragefield4/NonStorage.java
package io.takamaka.tests.errors.illegaltypeforstoragefield4;

public class NonStorage implements MyInterface {
}